message-queue/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-network-policy
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 5672
    - ports:
        - protocol: TCP
          port: 15672
  egress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
